# func

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  bad_example  build.sh  code  compile.sh  factorial  grammar  test.cpp  testrunner.py  tidy.sh
.github/workflows/: ci.yml
depends/: cxxopts.hpp
examples/: _infinite.fc  basic.fc  cond_test.fc  decl.fc  err_assign.fc  err_binop.fc  err_func_arg.fc  err_noname.fc  factorial.fc  map_reduce.fc  paris.fc  shadow.fc  sort.fc  test.fc  tic_tac_toe.fc  utils.fc  void.fc
examples/sim/: factorial.fc  paris.fc  sort.fc
notes/: grammar
src/: compiler.cpp  driver.cpp  driver.hpp  exception.cpp  exception.hpp  interpreter.cpp  printer.cpp  printer.hpp  utils.hpp
src/codegen/: lexer.l  parser.y
src/function/: function.cpp  function.hpp
src/node/: ast.cpp  ast.hpp  expression.cpp  expression.hpp  function.hpp  program.cpp  program.hpp  statement.cpp  statement.hpp
src/type/: type.cpp  type.hpp  type_checker.cpp  type_checker.hpp
src/visitor/: code_visitor.cpp  code_visitor.hpp  instruction_writer.hpp  operation.cpp  operation.hpp  print_visitor.cpp  print_visitor.hpp  register_allocator.hpp  sym_table.hpp  type_checker.cpp  type_checker.hpp  visitor.cpp  visitor.hpp
src/visitor/code_visitor/: code_visitor.cpp  code_visitor.hpp  instruction_writer.hpp  operation.cpp  operation.hpp  register_allocator.hpp
src/visitor/llvm_visitor/: llvm_visitor.cpp  llvm_visitor.hpp
src/visitor/print_visitor/: print_visitor.cpp  print_visitor.hpp
stdlib/: stdfunc.asm  utils.fc
tests/failing/: no_main.fc
tests/negative/: assign_wrong_func_type.fc  assign_wrong_type.fc  call_less_args.fc  call_less_args_2.fc  call_more_args.fc  call_more_args_2.fc  call_undeclared.fc  call_wrong_type_args.fc  call_wrong_type_args_2.fc  compare_diff_types.fc  declare_diff_body.fc  declare_diff_sign.fc  no_main.fc  no_semicolon.fc  sum_diff_types.fc  variable_undeclared.fc
tests/positive/: call_copy_args.fc  call_two_recursive.fc  compare_same_type.fc  declare.fc  declare_multiple.fc  factorial.fc  hello.fc  operations_bool.fc  operations_compare.fc  operations_math.fc  shadowing.fc  sort.fc
tests/regular/: factorial.fc
